--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 @import "bootstrap/scss/bootstrap";
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
+.controls {
+  width: 175px;
+  text-align: right;
+}
