--- a/src/app/customers/components/customers-list/customers-list.component.html
+++ b/src/app/customers/components/customers-list/customers-list.component.html
@@ -1,14 +1,18 @@
 <h2>Список покупателей</h2>
 
-<table class="table">
+<table class="table table-striped">
 
   <ng-container *ngTemplateOutlet="head"></ng-container>
 
   <tbody>
   <tr *ngFor="let customer of customer$ | async; let i = index">
-    <th scope="row">{{i + 1}}</th>
+    <th class="align-middle" scope="row">{{i + 1}}</th>
 
-    <ng-container *ngTemplateOutlet="body; context: {$implicit: customer}"></ng-container>
+    <ng-container
+      *ngTemplateOutlet="isEditPos === i ? thenBlock : elseBlock; context: {$implicit: customer}">
+    </ng-container>
+
+    <ng-container *ngTemplateOutlet="customerControls; context: {customer: customer, index: i}"></ng-container>
 
   </tr>
   </tbody>
@@ -27,12 +31,41 @@
   </thead>
 </ng-template>
 
-<ng-template #body let-customer>
-  <td>{{customer.name}}</td>
-  <td>{{customer.email}}</td>
-  <td>{{customer.mobile}}</td>
-  <td>{{customer.location}}</td>
+<ng-template #thenBlock let-customer>
   <td>
-    <button class="btn btn-sm btn-info"><i class="fa"></i></button>
+    <input #name (blur)="setValue('name', customer.name, name.value)"
+           [value]="customer.name" class="form-control form-control-sm" type="text">
+  </td>
+  <td>
+    <input #email (blur)="setValue('email', customer.email, email.value)"
+           [value]="customer.email" class="form-control form-control-sm" type="text">
+  </td>
+  <td>
+    <input #mobile (blur)="setValue('mobile', customer.mobile, mobile.value)"
+           [value]="customer.mobile" class="form-control form-control-sm" type="text">
+  </td>
+  <td>
+    <input #location (blur)="setValue('location', customer.location, location.value)"
+           [value]="customer.location" class="form-control form-control-sm" type="text">
+  </td>
+</ng-template>
+
+<ng-template #elseBlock let-customer>
+  <td class="align-middle">{{customer.name}}</td>
+  <td class="align-middle">{{customer.email}}</td>
+  <td class="align-middle">{{customer.mobile}}</td>
+  <td class="align-middle">{{customer.location}}</td>
+</ng-template>
+
+<ng-template #customerControls let-customer="customer" let-i="index">
+  <td class="align-middle controls">
+    <button (click)="editCustomer(i)" *ngIf="isEditPos !== i"
+            class="btn btn-sm btn-info ms-2"><i class="fas fa-edit"></i></button>
+    <button (click)="cancelEdit()" *ngIf="isEditPos === i"
+            class="btn btn-sm btn-info ms-2"><i class="fas fa-undo"></i></button>
+    <button (click)="saveCustomer(customer, i)" *ngIf="isEditPos === i"
+            class="btn btn-sm btn-info ms-2"><i class="fas fa-save"></i></button>
+    <button (click)="deleteCustomer()"
+            class="btn btn-sm btn-info ms-2"><i class="fas fa-trash"></i></button>
   </td>
 </ng-template>
