--- a/src/app/customers/components/customers-list/customers-list.component.html
+++ b/src/app/customers/components/customers-list/customers-list.component.html
@@ -65,7 +65,7 @@
             class="btn btn-sm btn-info ms-2"><i class="fas fa-undo"></i></button>
     <button (click)="saveCustomer(customer, i)" *ngIf="isEditPos === i"
             class="btn btn-sm btn-info ms-2"><i class="fas fa-save"></i></button>
-    <button (click)="deleteCustomer()"
+    <button (click)="deleteCustomer(customer)"
             class="btn btn-sm btn-info ms-2"><i class="fas fa-trash"></i></button>
   </td>
 </ng-template>
