--- a/src/app/customers/components/customers-list/customers-list.component.html
+++ b/src/app/customers/components/customers-list/customers-list.component.html
@@ -34,18 +34,22 @@
 <ng-template #thenBlock let-customer>
   <td>
     <input #name (blur)="setValue('name', customer.name, name.value)"
+           (keydown)="setValue('name', customer.name, name.value)"
            [value]="customer.name" class="form-control form-control-sm" type="text">
   </td>
   <td>
     <input #email (blur)="setValue('email', customer.email, email.value)"
+           (keydown)="setValue('email', customer.email, email.value)"
            [value]="customer.email" class="form-control form-control-sm" type="text">
   </td>
   <td>
     <input #mobile (blur)="setValue('mobile', customer.mobile, mobile.value)"
+           (keydown)="setValue('mobile', customer.mobile, mobile.value)"
            [value]="customer.mobile" class="form-control form-control-sm" type="text">
   </td>
   <td>
     <input #location (blur)="setValue('location', customer.location, location.value)"
+           (keydown)="setValue('location', customer.location, location.value)"
            [value]="customer.location" class="form-control form-control-sm" type="text">
   </td>
 </ng-template>
@@ -64,6 +68,7 @@
     <button (click)="cancelEdit()" *ngIf="isEditPos === i"
             class="btn btn-sm btn-info ms-2"><i class="fas fa-undo"></i></button>
     <button (click)="saveCustomer(customer, i)" *ngIf="isEditPos === i"
+            [disabled]="isNotChanged"
             class="btn btn-sm btn-info ms-2"><i class="fas fa-save"></i></button>
     <button (click)="deleteCustomer(customer)"
             class="btn btn-sm btn-info ms-2"><i class="fas fa-trash"></i></button>
